<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".Kubus">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kubus"
        android:fontFamily="@font/pbold"
        android:textSize="20dp"
        android:background="#e9c46a"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/pmedium"
        android:textSize="17dp"
        android:paddingLeft="10dp"
        android:text="@string/sisiKubus"
        />

    <EditText
        android:id="@+id/editTextSisiKubus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:paddingLeft="10dp"
        />

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/btnLuas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            android:onClick="hitungLuas"
            />

        <Button
            android:id="@+id/btnKeliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnLuas"
            android:text="@string/keliling"
            android:onClick="hitungKeliling"
            />

        <TextView
            android:id="@+id/textHasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLuas"
            android:text="Hasil"
            android:textSize="17dp"
            android:padding="5dp"
            android:fontFamily="@font/pmedium"
            />

        <TextView
            android:id="@+id/HasilKubus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textHasil"
            android:layout_below="@+id/btnLuas"
            android:padding="5dp"
            android:fontFamily="@font/pmedium"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"
            android:text="0"
            />
    </RelativeLayout>
</LinearLayout>