<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".Segitiga">

    <Button
        android:id="@+id/btnTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segitiga"
        android:fontFamily="@font/pbold"
        android:textSize="20dp"
        android:background="#f4a261"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="Alas"
        android:fontFamily="@font/pmedium"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/editTextAlas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:inputType="numberDecimal|numberSigned"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="Tinggi"
        android:fontFamily="@font/pmedium"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/editTextTinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:inputType="numberDecimal|numberSigned"
        />

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btnLuas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luas"
            android:onClick="hitungLuas"
            />

        <Button
            android:id="@+id/btnKeliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextTinggi"
            android:layout_toRightOf="@id/btnLuas"
            android:text="@string/keliling"
            android:onClick="hitungKeliling"
            />

        <TextView
            android:id="@+id/textHasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLuas"
            android:text="Hasil"
            android:textSize="17dp"
            android:padding="5dp"
            android:fontFamily="@font/pmedium"
            />

        <TextView
            android:id="@+id/HasilSegitiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textHasil"
            android:layout_below="@+id/btnLuas"
            android:padding="5dp"
            android:fontFamily="@font/pmedium"
            android:textSize="17dp"
            android:layout_marginLeft="5dp"
            android:text="0"
            />
    </RelativeLayout>

</LinearLayout>